# zeor2prod

./: Cargo.toml
configuration/: production.yaml
migrations/: 20250725172000_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
